updates pages in new simple design

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Thediveo.github.io
-description: TheDiveO user web page repository
-google_analytics: 
+title: TheDiveO
+description: TheDiveO's Open Source repositories.
+google_analytics:
 show_downloads: true
 theme: jekyll-theme-minimal
 
