--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: TheDiveO
 description: TheDiveO's Open Source repositories.
 google_analytics:
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
 
 gems:
