--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,11 @@ title: TheDiveO
 description: TheDiveO's Open Source repositories.
 google_analytics:
 show_downloads: false
-theme: jekyll-theme-minimal
+
+#theme: jekyll-theme-minimal
+remote_theme: "mmistakes/minimal-mistakes"
+
+minimal_mistakes_skin: "mint"
 
 gems:
   - jekyll-mentions
