chore: devcontainer: use thediveo's feature docsify, remove unneeded local feature
Signed-off-by: thediveo <thediveo@gmx.eu>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,9 +20,10 @@
     "features": {
         // https://github.com/devcontainers/features/tree/main/src/node
         "ghcr.io/devcontainers/features/node:1": {},
-        "./docsify": {
+        "ghcr.io/thediveo/devcontainer-features/docsify:0": {
             "port": "3300",
-            "livereload-port": "3301"
+            "livereload-port": "3301",
+            "docs-path": "./docs"
         }
     },
     
