feat: add lazygit
Signed-off-by: thediveo <thediveo@gmx.eu>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
             "port": "3300",
             "livereload-port": "3301",
             "docs-path": "./docs"
-        }
+        },
+        "ghcr.io/thediveo/devcontainer-features/lazygit:0": {} 
     },
     
     "customizations": {
